Fix alignment of center aligned inner button block

--- a/extensions/blocks/recurring-payments/view.scss
+++ b/extensions/blocks/recurring-payments/view.scss
@@ -38,3 +38,7 @@
 BODY.modal-open {
 	overflow: hidden;
 }
+
+.wp-block-jetpack-recurring-payments.aligncenter .wp-block-jetpack-button {
+	text-align: center;
+}
